# Python-WEB_team-project_deploy

./: .env.example  Procfile  README.docker.md  README.md  pyproject.toml  requirements.txt
assistant_app/: asgi.py
docker_make_container/: .env.example  docker-compose.yml
docker_make_image/: Dockerfile  docker-compose.yml
notes/: models.py
src/: README.md  architecture.txt  test.py
src/assistant_app/: asgi.py  settings.py  urls.py
src/assistant_app/templates/assistant_app/: base.html  file_deleted.html  file_list.html  upload_file.html  upload_success.html
src/contacts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_contact_user.py  0003_alter_contact_user.py
src/contacts/templates/contacts/: contact_confirm_delete.html  contact_detail.html  contact_form.html  contact_list.html
src/files/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/files/migrations/: 0001_initial.py  0002_remove_uploadedfile_file_uploadedfile_file_url.py  0003_uploadedfile_public_id.py
src/files/templatetags/: custom_filters.py
src/news/: tests.py  urls.py  views.py
src/news/templates/news/: news_summary.html
src/notes/: forms.py  models.py  tests.py  urls.py  views.py
src/notes/migrations/: 0001_initial.py  0002_note_user_alter_note_title.py  0003_alter_note_user.py
src/notes/templates/notes/: note_confirm_delete.html  note_detail.html  note_form.html  note_list.html  tag_confirm_delete.html  tag_form.html  tag_list.html
src/staticfiles/: password_reset_complete.html  password_reset_form.html  password_reset_sent.html
src/staticfiles/css/: styles.css
src/templates/: base.html  home.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_form.html  password_reset_sent.html  register.html  registration_success.html
src/users/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_userfile.py  0003_delete_userfile.py
src/users/templates/users/: base.html  file_list.html
src/utils/: gen_fake_data.py
