[tool.poetry]
name = "personal-assistent-project"
version = "0.1.0"
description = ""
authors = ["KyryloDolia <fr1ghtn1ght2101@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2 = "^2.9.10"
django-environ = "^0.12.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"