[tool.poetry]
name = "personal-assistent-project"
version = "1.0"
description = "Web-based Personal Assistant application to save and manage contacts, notes, documant files and receive some news feed."
authors = ["KyryloDolia <fr1ghtn1ght2101@gmail.com>, Yuliia Melnychenko <arwen.vogel@gmail.com>, VladPetrychuk <vladyslav.petrychuk42@gmail.com>, Vlad Hetman <vladislavgetman704@gmail.com>, Oleksii Kozupytsia <sumyultras88@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^5.1.6"
django-environ = "^0.12.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
faker = "^36.1.1"
cloudinary = "^1.42.2"
sendgrid = "^6.11.0"
requests = "^2.32.3"
dj-database-url = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"